# stdy

./: .gitignore  build.bash  run_bubble_test.bash  run_merge_test.bash
projects/: CMakeLists.txt
projects/bubble_sort/: CMakeLists.txt  main.cpp
projects/bubble_sort_mf/: CMakeLists.txt
projects/merge_sort/: CMakeLists.txt  merge_sort.cpp
projects/old_hw/: CMakeLists.txt  task5_akrylov.cpp
projects/unit_test_merge/: CMakeLists.txt
projects/unit_test_merge/src/: CMakeLists.txt  merge_sort.cpp  merge_sort.hpp
projects/unit_test_merge/test/: CMakeLists.txt  test_merge.cpp
